main heading alignment solved

--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,13 @@
     border: none;
 }
 .main-button{
-    width: 190px;
-    height: 35px;
+    width: 200px;
+    height: 40px;
     background: linear-gradient(to right, #777FFE, #FE48A1);
     color: #fff;
     border-radius: 5px;
     border: none;
-    font-size: 10px;
+    font-size: 12px;
 }
 button .cicle{
     position: absolute;
@@ -72,7 +72,8 @@ button .cicle{
     animation: scale 0.5s ease-out;
 }
 .main-heading{
-    font-size: 70px;
+    width: 100%;
+    font-size: 82px;
 }
 .community-section{
     position: relative;
@@ -86,7 +87,7 @@ button .cicle{
 .footer-background{
     position: relative;
     width: 100%;
-    height: 37vh;
+    height: 40vh;
     background: #050926;
 }
 .footer-links{
